added service tests