@@ -8,6 +8,7 @@ import ru.otus.exeptions.BookCommentsServiceException;
 import ru.otus.repositories.BookCommentsRepository;
 import ru.otus.validators.FieldValidator;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
@@ -27,7 +28,7 @@ public class BookCommentsServiceImpl implements BookCommentsService {
 	@Override
 	@Transactional
 	public BookComment save(final BookComment comment) {
-		checkBookCommentsOrThrow(List.of(comment));
+		checkBookCommentsOrThrow(Collections.singletonList(comment));
 		return bookCommentsRepository.save(comment);
 	}
 
@@ -41,20 +42,21 @@ public class BookCommentsServiceImpl implements BookCommentsService {
 	@Override
 	@Transactional(readOnly = true)
 	public Optional<BookComment> getById(final String id) {
-		checkIdsOrThrow(List.of(id));
+		checkIdsOrThrow(Collections.singletonList(id));
 		return bookCommentsRepository.findById(id);
 	}
 
 	@Override
 	@Transactional(readOnly = true)
 	public List<BookComment> getByBookId(final String id) {
-		checkIdsOrThrow(List.of(id));
+		checkIdsOrThrow(Collections.singletonList(id));
 		return bookCommentsRepository.findAllByBook_Id(id);
 	}
 
 	@Override
 	@Transactional(readOnly = true)
 	public List<BookComment> getByBooksIds(final List<String> ids) {
+		checkIdsOrThrow(ids);
 		return bookCommentsRepository.findAllByBook_IdIn(ids);
 	}
 
@@ -67,32 +69,36 @@ public class BookCommentsServiceImpl implements BookCommentsService {
 	@Override
 	@Transactional
 	public void deleteById(final String id) {
-		checkIdsOrThrow(List.of(id));
+		checkIdsOrThrow(Collections.singletonList(id));
 		bookCommentsRepository.deleteById(id);
 	}
 
 	@Override
 	@Transactional
 	public void deleteByBookId(final String id) {
-		checkIdsOrThrow(List.of(id));
+		checkIdsOrThrow(Collections.singletonList(id));
 		bookCommentsRepository.deleteAllByBook_Id(id);
 	}
 
 	@Override
 	@Transactional
 	public void deleteByGenreId(final String id) {
-		checkIdsOrThrow(List.of(id));
+		checkIdsOrThrow(Collections.singletonList(id));
 		bookCommentsRepository.deleteAllByBook_Genre_id(id);
 	}
 
 	@Override
 	@Transactional
 	public void deleteByAuthorId(final String id) {
-		checkIdsOrThrow(List.of(id));
+		checkIdsOrThrow(Collections.singletonList(id));
 		bookCommentsRepository.deleteAllByBook_Author_id(id);
 	}
 
 	private void checkIdsOrThrow(final List<String> ids) {
+		if (Objects.isNull(ids)) {
+			throw new BookCommentsServiceException("book comment id must not be null!");
+		}
+
 		if (hasInvalidIds(ids)) {
 			throw new BookCommentsServiceException("book comment id must not be null or empty!");
 		}
